--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <link rel="stylesheet" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <!-- <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" /> -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="/js/custom.js"></script>
     <script src="js/jquery.js"></script>
@@ -51,7 +51,7 @@
                         <a href="/">
                             <img src="img/logo.WebP" alt="">
                             <span class="text">
-                                <span>سادة الألمنيوم</span>
+                                <span>شركة البركات للألمنيوم</span>
                                 <span>شركة</span>
                             </span>
                         </a>
@@ -496,7 +496,7 @@
                     <a href="/">
                         <img src="img/logo.WebP" alt="">
                         <span class="text">
-                            <span>Aluminum Masters</span>
+                            <span>Al.Barakat Aluminum</span>
                             <span>Company</span>
                         </span>
                     </a>
