--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <header>
                 <div class="inner-container header-content">
                     <h1 class="logo">
-                        <a href="/">
+                        <a href="https://jawad602.github.io/alBarkatCo/">
                             <img src="img/logo.WebP" alt="">
                             <span class="text">
                                 <span>شركة البركات للألمنيوم</span>
@@ -493,7 +493,7 @@
         <header>
             <div class="inner-container header-content">
                 <h1 class="logo">
-                    <a href="/">
+                    <a href="https://jawad602.github.io/alBarkatCo/">
                         <img src="img/logo.WebP" alt="">
                         <span class="text">
                             <span>Al.Barakat Aluminum</span>
